--- a/app.css
+++ b/app.css
@@ -1,21 +1,73 @@
-.intro {
-    padding-bottom: 10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /* background-image: URL("https://media-exp1.licdn.com/dms/image/C4E03AQEO4Nj3UtpE2A/profile-displayphoto-shrink_100_100/0/1628331834184?e=1655337600&v=beta&t=XsUxthW3JMjR69ooWPVcsaEBpqXWyaAIF-AFs5qu0Hc"); */
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    color: var(--dark-blue);
+}
+
+:root {
+    --main-color: rgb(112, 228, 228);
+    --secondary-color: rgb(237, 237, 237);
+    --white: #ffffff;
+    --dark-blue: #14213d;
+    --black: #000000;
+    --orange: #fb5607;
+    --yellow: #ffbe0b;
+    --grey: #e0e0e0;
+    --blue: #3a86ff;
+    --purple: #8338ec;
+    --pink: #ff006e;
+}
+/*---------------------- NAVBAR ---------------------*/
+
+.navbar-brand {
+    margin-left: 3%;
+    font-weight: 700;
+    font-size: 1.4em;
+    color: #ffffff !important;
+}
+
+.nav-item {
+    font-weight: 700;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.nav-link {
+    color: #ffffff !important;
+}
+
+.navbar-light {
+    background-color: #8338ec;
+}
+
+.navbar-light .nav-item.active .nav-link,
+.navbar-light .nav-item:focus .nav-link,
+.navbar-light .nav-item:hover .nav-link {
+        color: var(--black);
+}
+
+
+
+/*-------------------- MAIN SECTIONS TEMPLATES ----------------------*/
+
+.bg-img {
+    background-image: url("bg.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .full-height {
-    height: 100vh;
-    margin-left: 3%;
-    margin-right: 3%;
-}
-
-h3 {
-    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 100vh;
+    padding-bottom: 5%;
 }
 
 .vertical-container {
@@ -26,15 +78,291 @@ h3 {
     height: 100%;
 }
 
-#about>div>p{
-    width: 80%;
-    padding: 5%;
-    border-radius: 8px;
-    background-color:rgb(188, 188, 188, 0.2);
+.horizontal-flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+}
+/*-------------------- INTRO ------------------------*/
+
+#intro {
+    margin-top: 7%;
+    padding-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* background-image: URL("https://media-exp1.licdn.com/dms/image/C4E03AQEO4Nj3UtpE2A/profile-displayphoto-shrink_100_100/0/1628331834184?e=1655337600&v=beta&t=XsUxthW3JMjR69ooWPVcsaEBpqXWyaAIF-AFs5qu0Hc"); */
 }
 
 .profile-pic {
     width: 20%;
     border-radius: 50%;
     margin-bottom: 5%;
+    box-shadow: 0px 0px 8px;
 }
+
+/*--------------------- ABOUT ---------------------*/
+
+
+.about-content{
+    text-align: justify;
+    text-align-last: center;
+    width: 80%;
+    font-size: 1.5em;
+    font-style: italic;
+    color: rgb(74, 74, 74);
+    padding: 7%;
+    border-radius: 8px;
+    background-color: var(--white);
+    z-index: 10;
+    box-shadow: 5px 5px 12px;
+}
+
+/*--------------------- SKILLS -----------------------*/
+
+.skill-cat {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 6%;
+    flex-basis: content;
+}
+
+.skill-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    background-color:var(--grey);
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 4%;
+    border-radius: 8px;
+    white-space: nowrap;
+}
+
+.skill-description {
+    width: fit-content;
+}
+
+.border-div {
+    width: 25%;
+    border-bottom: 1px solid rgba(105, 101, 101, 0.433);
+    margin-bottom: 4%;
+}
+
+.star {
+    color: rgb(190, 190, 190);
+    margin-left: 4%;
+    margin-right: 4%;
+    font-size: 20px;
+}
+
+.checked {
+    color: var(--yellow);
+}
+
+/*------------------PROJECTS----------------------*/
+
+.project-title {
+    color: var(--white);
+    text-decoration: underline;
+}
+
+.scroll {
+    display: flex;
+    flex-direction: row;
+    width: 98vw;
+    overflow: auto;
+}
+
+.project {
+    background-color: var(--dark-blue);
+    width: 550px;
+    height: fit-content;
+    border-radius: 12px;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 1%;
+    padding-bottom: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+}
+
+.skew-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-img {
+    border-radius: 10px;
+    width: 100%;
+    height: 300px;
+    margin-top: 4%;
+}
+
+.slideshow-container {
+    position: relative;
+    width: 500px;
+    height: fit-content;
+    padding-bottom: 5%;
+}
+
+.mySlides, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6 {
+    height: fit-content;
+    width: 100%;
+    display: none;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(88, 88, 88, 0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.dot, .dot2, .dot3, .dot4, .dot5, .dot6 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: var(--grey);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active-dot, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover, .dot5:hover, .dot6:hover {
+  background-color: var(--yellow);
+}
+
+/*-------------------- SKEW -----------------------*/
+
+.title {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    padding-top: .7rem;
+    padding-bottom: .7rem;
+    margin-top: 5%;
+    margin-bottom: 7%;
+    background-color: var(--yellow);
+    transform: skew(15deg, 1deg);
+    box-shadow: var(--black) 5px 10px;
+}
+
+.title>h3 {
+    transform: skew(-15deg, 0deg);
+}
+
+
+
+/*-------------------- GENERAL STYLES ----------------------*/
+
+
+h3 {
+    text-align: center;
+}
+
+h5 {
+    margin-bottom: 5%;
+    font-weight: 300;
+}
+
+h6 {
+    font-weight: 400;
+}
+
+.justify-content-center {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    padding-right: 5%;
+}
+
+/*-------------------CONTACT-------------------------*/
+
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-bottom: 5rem;
+}
+
+.fa {
+    font-size: 4rem;
+    border-radius: 50%;
+    margin: 0 3rem;
+    box-shadow: rgb(1,1,1,.3) 2px 4px;
+    transition: all .3s;
+}
+
+.fa:hover {
+    box-shadow: rgb(1,1,1,.3) 4px 8px;
+    transform: translateY(-.2rem) ;
+    transition: all .3s;
+    text-decoration: none;
+    color: white;
+}
+
+
+.fa-facebook {
+    background: linear-gradient(90deg, rgb(115, 115, 255), rgb(28, 111, 255));
+    color: white;
+    padding: .9rem 1.6rem;
+}
+
+.fa-youtube {
+    background: linear-gradient(rgb(255, 60, 60), rgb(255, 28, 28));
+    color: white;
+    padding: 1rem 1.2rem;
+}
+
+.fa-instagram {
+    background: linear-gradient(225deg, rgb(143, 1, 204), rgb(231, 2, 158), rgb(234, 241, 22));
+    color: white;
+    padding: 1rem 1.3rem;
+}
+
+
+/*-------------------------------*/
+
+* {box-sizing:border-box}
+
