--- a/app.css
+++ b/app.css
@@ -139,7 +139,8 @@ body {
     flex-direction: column;
     align-items: center;
     width: fit-content;
-    background-color:var(--grey);
+    box-shadow: rgb(1,1,1,.3) 5px 5px 10px;
+    background-color: #efefef;
     margin-left: 5%;
     margin-right: 5%;
     padding: 4%;
@@ -170,9 +171,10 @@ body {
 
 /*------------------PROJECTS----------------------*/
 
-.project-title {
-    color: var(--white);
-    text-decoration: underline;
+.project-title, .accomplishment-title, .activity-title {
+    color: rgb(41, 41, 41);
+    text-shadow: rgb(0, 0, 0, 0.3) 2px 2px;
+    font-family: 'IBM Plex Sans JP', sans-serif;
 }
 
 .scroll {
@@ -180,10 +182,13 @@ body {
     flex-direction: row;
     width: 98vw;
     overflow: auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
-.project {
-    background-color: var(--dark-blue);
+.project, .accomplishment, .activity {
+    box-shadow: rgb(1,1,1,.3) 5px 5px 20px;
+    background: linear-gradient(220deg, rgb(235, 16, 255), var(--purple));
     width: 550px;
     height: fit-content;
     border-radius: 12px;
@@ -204,7 +209,8 @@ body {
     align-items: center;
 }
 
-.project-img {
+.project-img, .accomplishment-img, .activity-img {
+    border: solid 2px rgb(0, 0, 0);
     border-radius: 10px;
     width: 100%;
     height: 300px;
@@ -218,7 +224,7 @@ body {
     padding-bottom: 5%;
 }
 
-.mySlides, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6 {
+.mySlides, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7, .mySlides8, .mySlides9 {
     height: fit-content;
     width: 100%;
     display: none;
@@ -258,7 +264,7 @@ body {
   text-align: center;
 }
 
-.dot, .dot2, .dot3, .dot4, .dot5, .dot6 {
+.dot, .dot2, .dot3, .dot4, .dot5, .dot6, .dot7, .dot8, .dot9 {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -269,7 +275,7 @@ body {
   transition: background-color 0.6s ease;
 }
 
-.active-dot, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover, .dot5:hover, .dot6:hover {
+.active-dot, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover, .dot5:hover, .dot6:hover, .dot7:hover, .dot8:hover, .dot9:hover {
   background-color: var(--yellow);
 }
 
@@ -327,7 +333,7 @@ h6 {
 }
 
 .fa {
-    font-size: 4rem;
+    font-size: 7rem !important;
     border-radius: 50%;
     margin: 0 3rem;
     box-shadow: rgb(1,1,1,.3) 2px 4px;
@@ -336,7 +342,7 @@ h6 {
 
 .fa:hover {
     box-shadow: rgb(1,1,1,.3) 4px 8px;
-    transform: translateY(-.2rem) ;
+    transform: translateY(-1.2rem);
     transition: all .3s;
     text-decoration: none;
     color: white;
@@ -346,13 +352,12 @@ h6 {
 .fa-facebook {
     background: linear-gradient(90deg, rgb(115, 115, 255), rgb(28, 111, 255));
     color: white;
-    padding: .9rem 1.6rem;
+    transform: translateY(-.5rem);
+    padding: 2rem 3rem 1.5rem 3rem;
 }
 
-.fa-youtube {
-    background: linear-gradient(rgb(255, 60, 60), rgb(255, 28, 28));
-    color: white;
-    padding: 1rem 1.2rem;
+.fa-facebook:hover {
+    transform: translateY(-1.7rem);
 }
 
 .fa-instagram {
@@ -361,8 +366,31 @@ h6 {
     padding: 1rem 1.3rem;
 }
 
+.fa-github {
+    font-size: 11rem !important;
+    color: var(--black);
+    transform: translateY(-1rem);
+}
+
+.fa-github:hover {
+    transform: translateY(-2.5rem);
+    color: var(--black);
+}
+
+.fa-linkedin {
+    background: rgb(28, 111, 255);
+    color: white;
+    padding: 1rem 1rem;
+    border-radius: 10%;
+}
+
 
 /*-------------------------------*/
 
 * {box-sizing:border-box}
+
+/* width */
+::-webkit-scrollbar {
+    display: none;
+  }
 
