--- a/app.css
+++ b/app.css
@@ -48,6 +48,10 @@ body {
         color: var(--black);
 }
 
+#navbar {
+    transition: all 0.2s;
+}
+
 
 
 /*-------------------- MAIN SECTIONS TEMPLATES ----------------------*/
@@ -172,7 +176,7 @@ body {
 
 /*------------------PROJECTS----------------------*/
 
-.project-title, .accomplishment-title, .activity-title {
+.project-title, .accomplishment-title, .activity-title, .work-title {
     color: rgb(41, 41, 41);
     text-shadow: rgb(0, 0, 0, 0.3) 2px 2px;
     font-family: 'IBM Plex Sans JP', sans-serif;
@@ -187,7 +191,7 @@ body {
     padding-bottom: 2%;
 }
 
-.project, .accomplishment, .activity {
+.project, .accomplishment, .activity, .work {
     box-shadow: rgb(1,1,1,.3) 5px 5px 20px;
     background: linear-gradient(220deg, rgb(235, 16, 255), var(--purple));
     width: 550px;
@@ -210,13 +214,19 @@ body {
     align-items: center;
 }
 
-.project-img, .accomplishment-img, .activity-img {
+.project-img, .accomplishment-img, .activity-img, .work-img {
     border: solid 2px rgb(0, 0, 0);
     border-radius: 10px;
     width: 100%;
     height: 300px;
     margin-top: 4%;
+    animation: fadeIn 0.7s;
 }
+
+@keyframes fadeIn {
+    0% { opacity: 0.8; }
+    100% { opacity: 1; }
+  }
 
 .slideshow-container {
     position: relative;
@@ -225,7 +235,7 @@ body {
     padding-bottom: 5%;
 }
 
-.mySlides, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7, .mySlides8, .mySlides9, .mySlides10, .mySlides11 {
+.mySlides, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7, .mySlides8, .mySlides9, .mySlides10, .mySlides11, .mySlides12 {
     height: fit-content;
     width: 100%;
     display: none;
@@ -265,7 +275,7 @@ body {
   text-align: center;
 }
 
-.dot, .dot2, .dot3, .dot4, .dot5, .dot6, .dot7, .dot8, .dot9, .dot10, .dot11 {
+.dot, .dot2, .dot3, .dot4, .dot5, .dot6, .dot7, .dot8, .dot9, .dot10, .dot11, .dot12 {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -276,7 +286,7 @@ body {
   transition: background-color 0.6s ease;
 }
 
-.active-dot, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover, .dot5:hover, .dot6:hover, .dot7:hover, .dot8:hover, .dot9:hover, .dot10:hover, .dot11:hover {
+.active-dot, .dot:hover, .dot2:hover, .dot3:hover, .dot4:hover, .dot5:hover, .dot6:hover, .dot7:hover, .dot8:hover, .dot9:hover, .dot10:hover, .dot11:hover, .dot12:hover {
   background-color: var(--yellow);
 }
 
