--- a/app.css
+++ b/app.css
@@ -412,6 +412,30 @@ h6 {
 
 /* width */
 ::-webkit-scrollbar {
-    display: none;
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 
+
+  .fade-in {
+    opacity: 0;
+    transition: opacity 300ms ease-in;
+  }
+
+  .fade-in.appear {
+    opacity: 1;
+  }
