--- a/app.css
+++ b/app.css
@@ -40,7 +40,7 @@ body {
 }
 
 .navbar-light {
-    background-color: #8338ec;
+    background-color: #14213d;
 }
 
 .navbar-light .nav-item.active .nav-link,
@@ -73,7 +73,8 @@ body {
     justify-content: flex-start;
     min-height: 100vh;
     padding-bottom: 5%;
-    background: linear-gradient(50deg, var(--white), rgb(231, 238, 255));
+    /* background: linear-gradient(50deg, var(--white), rgb(231, 238, 255)); */
+    background: #e5e5e5;
 }
 
 .vertical-container {
@@ -95,21 +96,20 @@ body {
 /*-------------------- INTRO ------------------------*/
 
 #intro {
-    padding-top: 7%;
+    padding-top: 10%;
     padding-bottom: 10%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    text-align: center;
+    text-align: left;
     /* background-image: URL("https://media-exp1.licdn.com/dms/image/C4E03AQEO4Nj3UtpE2A/profile-displayphoto-shrink_100_100/0/1628331834184?e=1655337600&v=beta&t=XsUxthW3JMjR69ooWPVcsaEBpqXWyaAIF-AFs5qu0Hc"); */
 }
 
 .profile-pic {
-    width: 20%;
+    width: 25%;
     border-radius: 50%;
-    margin-bottom: 5%;
-    box-shadow: 0px 0px 8px;
+    border: 4px solid #14213d;
 }
 
 /*--------------------- ABOUT ---------------------*/
@@ -146,7 +146,7 @@ body {
     align-items: center;
     width: fit-content;
     box-shadow: rgb(1,1,1,.3) 5px 5px 10px;
-    background-color: #efefef;
+    background-color: #14213d;
     margin-left: 5%;
     margin-right: 5%;
     padding: 4%;
@@ -175,19 +175,41 @@ body {
     color: var(--yellow);
 }
 
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
 .close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
+}
   
-  .close:hover,
-  .close:focus {
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
 /*------------------PROJECTS----------------------*/
 
@@ -472,3 +494,27 @@ h6 {
     color: white;
     text-decoration: none;
 }
+
+/*typewriting effect*/
+
+.typewriter {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid #fca311; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    letter-spacing: .07em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end) infinite,
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #fca311; }
+  }
