--- a/app.css
+++ b/app.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+  
 html {
     scroll-behavior: smooth;
 }
@@ -12,7 +18,7 @@ body {
     --white: #ffffff;
     --dark-blue: #14213d;
     --black: #000000;
-    --orange: #fb5607;
+    --orange: #fca311;
     --yellow: #ffbe0b;
     --grey: #e0e0e0;
     --blue: #3a86ff;
@@ -23,16 +29,17 @@ body {
 /*---------------------- NAVBAR ---------------------*/
 
 .navbar-brand {
-    margin-left: 3%;
+    margin: 0 30% 0 5%;
     font-weight: 700;
-    font-size: 1.4em;
+    font-size: 1.7em;
     color: #ffffff !important;
 }
 
 .nav-item {
-    font-weight: 700;
+    font-weight: 300;
     padding-left: 2%;
     padding-right: 2%;
+    white-space: nowrap;
 }
 
 .nav-link {
@@ -40,19 +47,23 @@ body {
 }
 
 .navbar-light {
-    background-color: #14213d;
+    background-color: transparent;
 }
 
 .navbar-light .nav-item.active .nav-link,
 .navbar-light .nav-item:focus .nav-link,
 .navbar-light .nav-item:hover .nav-link {
-        color: var(--black);
+        color: #fca311;
 }
 
 #navbar {
     transition: all 0.2s;
+    font-family: 'Roboto', sans-serif;
 }
 
+.scrolled {
+    background-color: rgb(0, 0, 0, 0.8);
+}
 
 
 /*-------------------- MAIN SECTIONS TEMPLATES ----------------------*/
@@ -66,15 +77,9 @@ body {
 }
 
 .full-height {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
     min-height: 100vh;
-    padding-bottom: 5%;
-    /* background: linear-gradient(50deg, var(--white), rgb(231, 238, 255)); */
-    background: #e5e5e5;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .vertical-container {
@@ -98,35 +103,93 @@ body {
 #intro {
     padding-top: 10%;
     padding-bottom: 10%;
+    font-family: 'Roboto', sans-serif;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    text-align: left;
+    text-align: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/bg-me.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
     /* background-image: URL("https://media-exp1.licdn.com/dms/image/C4E03AQEO4Nj3UtpE2A/profile-displayphoto-shrink_100_100/0/1628331834184?e=1655337600&v=beta&t=XsUxthW3JMjR69ooWPVcsaEBpqXWyaAIF-AFs5qu0Hc"); */
 }
 
+
+/*************************************************
+**************************************************
+
+Website Name: Offset Borders
+Website Author: Tabitha Turton
+Author URL: tabithaturton.com
+Copyright 2017. All Rights Reserved.
+*/
+
 .profile-pic {
-    width: 25%;
-    border-radius: 50%;
-    border: 4px solid #14213d;
+    height: 25vw;
+    width: 25vw;
+    margin: 50px;
+    background-image: url(images/personal-photo.jpg);
+    background-size: cover;
+    position: relative;
 }
+
+.profile-pic:before,
+.profile-pic:after {
+    z-index: 10;
+    content:"";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.shifted-border:before,
+.shifted-border:after {
+  left: 10px;
+  top: 10px;
+}
+
+.shifted-border:before {
+  border-top: 2px solid orange;
+  border-right: 2px solid orange;
+  z-index: 0;
+}
+
+.shifted-border:after {
+  border-bottom: 2px solid orange;
+  border-left: 2px solid orange;
+  z-index: 0;
+}
+
+/************************************************
+************************************************/
+
 
 /*--------------------- ABOUT ---------------------*/
 
+#about {
+    background-color: #242423;
+}
 
 .about-content{
     text-align: justify;
     text-align-last: center;
-    width: 80%;
-    font-size: 1.5em;
-    font-style: italic;
-    color: rgb(74, 74, 74);
-    padding: 7%;
+    font-size: 1.2em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: white;
+    margin: 50px;
+    margin-top: 60px;
     border-radius: 8px;
-    background-color: var(--white);
     z-index: 10;
-    box-shadow: 5px 5px 12px;
+    width: 60%;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: row;
 }
 
 /*--------------------- SKILLS -----------------------*/
@@ -146,7 +209,7 @@ body {
     align-items: center;
     width: fit-content;
     box-shadow: rgb(1,1,1,.3) 5px 5px 10px;
-    background-color: #14213d;
+    background-color: white;
     margin-left: 5%;
     margin-right: 5%;
     padding: 4%;
@@ -231,7 +294,7 @@ body {
 .project, .accomplishment, .activity, .work {
     box-shadow: rgb(1,1,1,.3) 5px 5px 20px;
     background: linear-gradient(220deg, rgb(235, 16, 255), var(--purple));
-    width: 550px;
+    /* width: 550px; */
     height: fit-content;
     border-radius: 12px;
     margin-left: 2%;
@@ -330,16 +393,30 @@ body {
 /*-------------------- SKEW -----------------------*/
 
 .title {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    padding-top: .7rem;
-    padding-bottom: .7rem;
-    margin-top: 5%;
-    margin-bottom: 7%;
-    background-color: var(--yellow);
-    transform: skew(15deg, 1deg);
-    box-shadow: var(--black) 5px 10px;
+    position: relative;
+    text-align: center;
 }
+
+.front {
+    color: orange;
+    font-size: 2rem;
+    font-weight: bold;
+    white-space: nowrap;
+    z-index: 9;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.back {
+    color: #242423;
+    font-size: 7rem;
+    letter-spacing: 1rem;
+    font-weight: 900;
+    text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.1), 1px -1px 0 rgba(255, 255, 255, 0.1), -1px 1px 0 rgba(255, 255, 255, 0.1), 1px 1px 0 rgba(255, 255, 255, 0.1);
+}
+
 
 .title>h3 {
     transform: skew(-15deg, 0deg);
@@ -497,24 +574,42 @@ h6 {
 
 /*typewriting effect*/
 
-.typewriter {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid #fca311; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    letter-spacing: .07em; /* Adjust as needed */
-    animation: 
-      typing 3.5s steps(40, end) infinite,
-      blink-caret .75s step-end infinite;
+.wrapper {
+    display: grid;
+    place-items: center;
   }
   
-  /* The typing effect */
+  .typewriter {
+    width: 28ch;
+    animation: typing 2s steps(28), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid orange;
+    letter-spacing: 0.17rem;
+    font-size: 2em;
+  }
+  
   @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
+    from {
+      width: 0
+    }
   }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #fca311; }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .typewriter {
+      font-size: 1.5em;
+      letter-spacing: 0.13rem;
+    }
+  }
+  @media only screen and (max-width: 400px) {
+    .typewriter {
+      font-size: 1em;
+      letter-spacing: 0.08rem;
+    }
   }
