--- a/app.css
+++ b/app.css
@@ -192,6 +192,16 @@ Copyright 2017. All Rights Reserved.
     flex-direction: row;
 }
 
+/*-------------------- PORTFOLIO ---------------------*/
+
+#portfolio {
+    background-color: #161616;
+}
+
+#portfolio > .title > .back {
+    color: #161616;
+}
+
 /*--------------------- SKILLS -----------------------*/
 
 .skill-cat {
@@ -450,30 +460,63 @@ h6 {
 
 /*-------------------CONTACT-------------------------*/
 
-.social {
+#contact {
+    background-color: #242423;
+}
+
+/* .social {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     padding-bottom: 5rem;
-}
+} */
 
 .fa {
-    font-size: 7rem !important;
+    font-size: 4rem !important;
     border-radius: 50%;
     margin: 0 3rem;
-    box-shadow: rgb(1,1,1,.3) 2px 4px;
     transition: all .3s;
+    color: orange;
 }
 
 .fa:hover {
-    box-shadow: rgb(1,1,1,.3) 4px 8px;
-    transform: translateY(-1.2rem);
+    transform: translateY(-1rem);
     transition: all .3s;
     text-decoration: none;
     color: white;
 }
 
+.contact-input {
+    border-radius: 25px;
+    padding-left: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+    /* border: 2px solid rgba(255, 255, 255, 0.1);
+    border: 2px solid orange; */
+    width: 100%;
+    padding: 0.4rem 1rem;
+    margin: 0.6rem 0;
+}
 
+#msg-input {
+    min-height: 8rem;
+}
+
+.content {
+    margin: 1rem;
+}
+
+.download {
+    animation: float 2s ease-in-out infinite;
+}
+
+@keyframes float {
+    70% {
+        transform: translateY(-10%);
+    }
+}
+
+/* 
 .fa-facebook {
     background: linear-gradient(90deg, rgb(115, 115, 255), rgb(28, 111, 255));
     color: white;
@@ -517,7 +560,7 @@ h6 {
 .fa-envelope:hover {
     color: rgb(20, 96, 226);
     border-radius: 10px;
-}
+} */
 
 
 /*-------------------------------*/
@@ -558,18 +601,40 @@ h6 {
 
 .button {
     border-radius: 10px;
-    background-color: rgb(92, 213, 92);
-    padding: 0.5% 1%;
-    color: white;
-    width: max-content;
-    transition: background-color 200ms ease-in;
-    box-shadow: rgb(181, 181, 181) 3px 3px 5px;
+    background-color: transparent;
+    border: 1px solid orange;
+    color: orange;
+    transition: all 0.2s ease-in-out;
+    padding: 2px 6px;
 }
 
 .button:hover {
-    background-color: rgb(66, 162, 66);
-    color: white;
+    color: orange;
     text-decoration: none;
+    transform: translateY(-10%);
+    transition: all 0.2s ease-in-out;
+}
+
+.curved-btn {
+    border-radius: 20px;
+    background-color: transparent;
+    border: 1px solid orange;
+    color: orange;
+    transition: all 0.2s ease-in-out;
+    padding: 2px 10px 4px 10px;
+    margin: 0 10px;
+}
+
+.curved-btn:hover {
+    color: black;
+    background-color: orange;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+
+.curved-btn:focus {
+    background-color: orange;
+    transition: all 0.2s ease-in-out;
 }
 
 /*typewriting effect*/
