--- a/app.css
+++ b/app.css
@@ -37,8 +37,8 @@ body {
 
 .nav-item {
     font-weight: 300;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 6%;
+    padding-right: 6%;
     white-space: nowrap;
 }
 
@@ -59,6 +59,7 @@ body {
 #navbar {
     transition: all 0.2s;
     font-family: 'Roboto', sans-serif;
+    margin-right: 3%;
 }
 
 .scrolled {
@@ -152,15 +153,15 @@ Copyright 2017. All Rights Reserved.
 }
 
 .shifted-border:before {
-  border-top: 2px solid orange;
-  border-right: 2px solid orange;
-  z-index: 0;
+  border-top: 3px solid orange;
+  border-right: 3px solid orange;
+  z-index: -2;
 }
 
 .shifted-border:after {
-  border-bottom: 2px solid orange;
-  border-left: 2px solid orange;
-  z-index: 0;
+  border-bottom: 3px solid orange;
+  border-left: 3px solid orange;
+  z-index: -2;
 }
 
 /************************************************
@@ -200,6 +201,11 @@ Copyright 2017. All Rights Reserved.
 
 #portfolio > .title > .back {
     color: #161616;
+}
+
+.image {
+    object-fit: cover;
+    /* box-shadow: 0px 0px 1px 1px white; */
 }
 
 /*--------------------- SKILLS -----------------------*/
@@ -481,12 +487,23 @@ h6 {
     background-color: #242423;
 }
 
+.email-form {
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    max-width: 80%;
+}
+
+.contact-text {
+    color: orange;
+}
+
 /* .social {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     padding-bottom: 5rem;
 } */
+
 
 .fa {
     font-size: 4rem !important;
@@ -496,8 +513,11 @@ h6 {
     color: orange;
 }
 
+.fa-envelope {
+    font-size: 2rem !important;
+}
 .fa:hover {
-    transform: translateY(-1rem);
+    transform: translateY(-0.7rem);
     transition: all .3s;
     text-decoration: none;
     color: white;
