--- a/app.css
+++ b/app.css
@@ -203,9 +203,56 @@ Copyright 2017. All Rights Reserved.
     color: #161616;
 }
 
+.img-container {
+    position: relative;
+    overflow: hidden;
+    width: 22vw;
+    height: 22vw;
+    /* box-shadow: 5px 5px 10px 0px orange; */
+}
+.work-img, .project-img, .activity-img {
+    display: inline-block;
+    transition: transform 0.3s ease-in-out;
+}
+
 .image {
+    /* background-size: cover; */
     object-fit: cover;
-    /* box-shadow: 0px 0px 1px 1px white; */
+    width: 22vw;
+    height: 22vw;
+    /* box-shadow: 0px 0px 5px 0px white; */
+}
+
+.img-shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 5px 1px 7px 2px rgb(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0, 0.9);
+    opacity: 0;
+    top: 0;
+    left: 0;
+    border: 2px orange;
+    transition: all 0.4s;
+    color: orange;
+}
+
+.overlay:hover{
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.project-desc {
+    text-align: center;
+    font-size: 1rem;
 }
 
 /*--------------------- SKILLS -----------------------*/
@@ -301,12 +348,6 @@ Copyright 2017. All Rights Reserved.
     column-gap: 40px;
 }
 
-.grid-container > img {
-    width: 20vw;
-    height: 20vw;
-    background-size: cover;
-}
-
 /*------------------PROJECTS----------------------*/
 
 .project-title, .accomplishment-title, .activity-title, .work-title {
@@ -347,7 +388,7 @@ Copyright 2017. All Rights Reserved.
     align-items: center;
 }
 
-.project-img, .accomplishment-img, .activity-img, .work-img {
+.project-image, .accomplishment-image, .activity-image, .work-image {
     border: solid 2px rgb(0, 0, 0);
     border-radius: 10px;
     width: 100%;
@@ -489,8 +530,18 @@ h6 {
 
 .email-form {
     margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     max-width: 80%;
+}
+
+.send-btn {
+    border-radius: 5px;
+    color: #161616;
+    background-color: orange;
+    border: none;
+    padding: 2px 20px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
 }
 
 .contact-text {
