--- a/app.css
+++ b/app.css
@@ -557,7 +557,7 @@ h6 {
 
 
 .fa {
-    font-size: 4rem !important;
+    font-size: 6rem !important;
     border-radius: 50%;
     margin: 0 3rem;
     transition: all .3s;
@@ -565,7 +565,7 @@ h6 {
 }
 
 .fa-envelope {
-    font-size: 2rem !important;
+    /* font-size: 2rem !important; */
 }
 .fa:hover {
     transform: translateY(-0.7rem);
@@ -591,7 +591,7 @@ h6 {
 }
 
 .content {
-    margin: 1rem;
+    margin-bottom: 3rem;
 }
 
 .download {
