changed about profile picture

--- a/app.css
+++ b/app.css
@@ -132,7 +132,7 @@ Copyright 2017. All Rights Reserved.
     height: 25vw;
     width: 25vw;
     margin: 50px;
-    background-image: url(images/personal-photo.jpg);
+    background-image: url(images/profile-photo.jpg);
     background-size: cover;
     position: relative;
 }
